services/L08ingress/deployment-app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2

  selector:
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo

        args:
        - "-text=Welcome to APP1"

        ports:
        - containerPort: 5678
