services/L08ingress/deployment-app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo

        args:
        - "-text=Welcome to APP2"

        ports:
        - containerPort: 5678
