services/L08ingress/app2-service.yml
apiVersion: v1
kind: Service

metadata:
  name: app2-service

spec:

  selector:
    app: app2

  ports:
  - port: 80
    targetPort: 5678

  type: ClusterIP
