services/L08ingress/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: demo-ingress

spec:

  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /app1

        pathType: Prefix

        backend:

          service:

            name: app1-service

            port:

              number: 80

      - path: /app2

        pathType: Prefix

        backend:

          service:

            name: app2-service

            port:

              number: 80
